created transformer model with Obolo custom tokenizer for inputs

--- a/tokenizer_testing.ipynb
+++ b/tokenizer_testing.ipynb
@@ -69,22 +69,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cf52af7812249a28ece0246f7af56c6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tokenizers import Tokenizer, decoders\n",
     "from tokenizers.models import BPE\n",
@@ -103,69 +88,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ef19ffb4b0c45718dbb1d6cdebc731b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating CSV from Arrow format:   0%|          | 0/28 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ee69e07aed24b988bdac51dd703e52c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating CSV from Arrow format:   0%|          | 0/4 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b7ead473930415a99f57716a32078ea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c2b66772e61443c96f3ed661fb0edb6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# train.to_csv('./data/train2.csv')\n",
-    "# test.to_csv('./data/test2.csv')\n",
-    "train = load_dataset('csv', data_files='data/train2.csv')['train']\n",
-    "test = load_dataset('csv', data_files='data/test2.csv')['train']"
+    "# train.to_csv('./data/train.csv')\n",
+    "# test.to_csv('./data/test.csv')\n",
+    "train = load_dataset('csv', data_files='data/train.csv')['train']\n",
+    "test = load_dataset('csv', data_files='data/test.csv')['train']"
    ]
   },
   {
@@ -186,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -200,8 +128,8 @@
    "source": [
     "# find total words and unique words in the Obolo set\n",
     "import string\n",
-    "data = dataset['train']\n",
-    "unique_words_verse = [set(s.translate(str.maketrans('', '', string.punctuation)).strip().split()) for s in data['Obolo']]\n",
+    "data = train['Obolo']+test['Obolo']\n",
+    "unique_words_verse = [set(s.translate(str.maketrans('', '', string.punctuation)).strip().split()) for s in data]\n",
     "unique_words = set()\n",
     "for s in unique_words_verse:\n",
     "    unique_words.update(s)\n",
@@ -210,13 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "freq = defaultdict(int)\n",
-    "for s in data['Obolo']:\n",
+    "for s in data:\n",
     "    words = s.translate(str.maketrans('', '', string.punctuation)).strip().split()\n",
     "    for w in words:\n",
     "        freq[w] += 1"
@@ -224,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +161,7 @@
        "8865"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +185,7 @@
        "882513"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,21 +197,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15866\n",
-      "30535\n"
+      "17596\n",
+      "30600\n"
      ]
     }
    ],
    "source": [
     "print(tokenizer.get_vocab_size())\n",
-    "unique_words_verse = [set(verse.split()) for verse in train['obolo']]\n",
+    "unique_words_verse = [set(verse.split()) for verse in train['Obolo']]\n",
     "unique_words = set()\n",
     "for s in unique_words_verse:\n",
     "    unique_words.update(s)\n",
@@ -292,23 +220,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "“ekene onene ifo emen inyọn̄, mè isibi inu? sà ìre ekene otitiin̄ efet itap me akajit ubọk kan̄ ichit? ekene okat mun̄ me emen ekwut ibọp? sà ìre ekene osun̄ ntutun̄ ere geelek me linyọn̄ me irek kan̄? keke ore erieen̄ kan̄? sà ìre keke ore erieen̄ gwun̄ kan̄? tumu nyi emi nu, mè ire oriọọn̄!\n",
-      "['ĠâĢľ', 'ekene', 'Ġonene', 'Ġifo', 'Ġemen', 'Ġinyo', 'Ì£', 'n', 'ÌĦ,', 'Ġme', 'ÌĢ', 'Ġisibi', 'Ġinu', '?', 'Ġsa', 'ÌĢ', 'Ġi', 'ÌĢ', 're', 'Ġekene', 'Ġotitiin', 'ÌĦ', 'Ġefet', 'Ġitap', 'Ġme', 'Ġakajit', 'Ġubo', 'Ì£', 'k', 'Ġkan', 'ÌĦ', 'Ġichit', '?', 'Ġekene', 'Ġokat', 'Ġmun', 'ÌĦ', 'Ġme', 'Ġemen', 'Ġekwut', 'Ġibo', 'Ì£', 'p', '?', 'Ġsa', 'ÌĢ', 'Ġi', 'ÌĢ', 're', 'Ġekene', 'Ġosun', 'ÌĦ', 'Ġntutun', 'ÌĦ', 'Ġere', 'Ġgeelek', 'Ġme', 'Ġlinyo', 'Ì£', 'n', 'ÌĦ', 'Ġme', 'Ġirek', 'Ġkan', 'ÌĦ?', 'Ġkeke', 'Ġore', 'Ġerieen', 'ÌĦ', 'Ġkan', 'ÌĦ?', 'Ġsa', 'ÌĢ', 'Ġi', 'ÌĢ', 're', 'Ġkeke', 'Ġore', 'Ġerieen', 'ÌĦ', 'Ġgwun', 'ÌĦ', 'Ġkan', 'ÌĦ?', 'Ġtumu', 'Ġnyi', 'Ġemi', 'Ġnu', ',', 'Ġme', 'ÌĢ', 'Ġire', 'Ġorio', 'Ì£', 'o', 'Ì£', 'n', 'ÌĦ!']\n",
-      "jerimaya onenitumu inyi ebi owot iman kè rekabu cha ibe: “okumugwem ogwukaan̄ inyọn̄ mè ijọn̄, awaji ebi ijeren, ìtumu ibe ikeyi: ‘mije enyi etetbe ikan nte nte kinyi, jonadabu, onyibe enyi ikaan̄ inye, mè igban̄ utọn̄ me lek otutuuk nteme kan̄, mè irọ inu geelek îtọbe,\n",
-      "['Ġjerimaya', 'Ġonenitumu', 'Ġinyi', 'Ġebi', 'Ġowot', 'Ġiman', 'Ġke', 'ÌĢ', 'Ġrekabu', 'Ġcha', 'Ġibe', ':', 'ĠâĢľ', 'okumugwem', 'Ġogwukaan', 'ÌĦ', 'Ġinyo', 'Ì£', 'n', 'ÌĦ', 'Ġme', 'ÌĢ', 'Ġijo', 'Ì£', 'n', 'ÌĦ,', 'Ġawaji', 'Ġebi', 'Ġijeren', ',', 'Ġi', 'ÌĢ', 'tumu', 'Ġibe', 'Ġikeyi', ':', 'ĠâĢĺ', 'mije', 'Ġenyi', 'Ġetetbe', 'Ġikan', 'Ġnte', 'Ġnte', 'Ġkinyi', ',', 'Ġjonadabu', ',', 'Ġonyibe', 'Ġenyi', 'Ġikaan', 'ÌĦ', 'Ġinye', ',', 'Ġme', 'ÌĢ', 'Ġigban', 'ÌĦ', 'Ġuto', 'Ì£', 'n', 'ÌĦ', 'Ġme', 'Ġlek', 'Ġotutuuk', 'Ġnteme', 'Ġkan', 'ÌĦ,', 'Ġme', 'ÌĢ', 'Ġiro', 'Ì£', 'Ġinu', 'Ġgeelek', 'Ġi', 'ÌĤ', 'to', 'Ì£', 'be', ',']\n",
-      "ìkakup me uyọt ibe emi ǹge ikpa ǹjet enyi ofolek ikwaan̄ ntap-ubọk eyi ekiria ijet ebi eyi awaji ìkup me judia.\n",
-      "['Ġi', 'ÌĢ', 'kakup', 'Ġme', 'Ġuyo', 'Ì£', 't', 'Ġibe', 'Ġemi', 'Ġn', 'ÌĢ', 'ge', 'Ġikpa', 'Ġn', 'ÌĢ', 'jet', 'Ġenyi', 'Ġofolek', 'Ġikwaan', 'ÌĦ', 'Ġntap', '-', 'ubo', 'Ì£', 'k', 'Ġeyi', 'Ġekiria', 'Ġijet', 'Ġebi', 'Ġeyi', 'Ġawaji', 'Ġi', 'ÌĢ', 'kup', 'Ġme', 'Ġjudia', '.']\n",
-      "ire ata etip eji ekilook ikitumu ibe ke awaji îjomo karais me mkpa, usini ebi kinyi ejeje ikitumu ibe ke ebi ìkwakwaan̄ kpebejomo me mkpa?\n",
-      "['Ġire', 'Ġata', 'Ġetip', 'Ġeji', 'Ġekilook', 'Ġikitumu', 'Ġibe', 'Ġke', 'Ġawaji', 'Ġi', 'ÌĤ', 'jomo', 'Ġkarais', 'Ġme', 'Ġmkpa', ',', 'Ġusini', 'Ġebi', 'Ġkinyi', 'Ġejeje', 'Ġikitumu', 'Ġibe', 'Ġke', 'Ġebi', 'Ġi', 'ÌĢ', 'kwakwaan', 'ÌĦ', 'Ġkpebejomo', 'Ġme', 'Ġmkpa', '?']\n",
-      "“ìtumu ìnyi ejikaya ogwu ubọọn̄ juda ìbe: kachieek ibe awaji kwun̄ ya ogwu owu otoon̄be ejit me lek ifiaan̄ owu ibe ke jeruselem ìkponin̄ me ubọk ogwu ubọọn̄ asiria!\n",
-      "['ĠâĢľ', 'i', 'ÌĢ', 'tumu', 'Ġi', 'ÌĢ', 'nyi', 'Ġejikaya', 'Ġogwu', 'Ġubo', 'Ì£', 'o', 'Ì£', 'n', 'ÌĦ', 'Ġjuda', 'Ġi', 'ÌĢ', 'be', ':', 'Ġkachieek', 'Ġibe', 'Ġawaji', 'Ġkwun', 'ÌĦ', 'Ġya', 'Ġogwu', 'Ġowu', 'Ġotoon', 'ÌĦ', 'be', 'Ġejit', 'Ġme', 'Ġlek', 'Ġifiaan', 'ÌĦ', 'Ġowu', 'Ġibe', 'Ġke', 'Ġjeruselem', 'Ġi', 'ÌĢ', 'kponin', 'ÌĦ', 'Ġme', 'Ġubo', 'Ì£', 'k', 'Ġogwu', 'Ġubo', 'Ì£', 'o', 'Ì£', 'n', 'ÌĦ', 'Ġasiria', '!']\n"
+      "eya orọ, nnenikana isi lek ogwukaan̄-ene awaji, mè ito ito inyi, mè iriaak uriaak, mè ibeek mbeek, mè ijin otu, mè itap ofọnti ufieejit, mè ifuun̄ lek me ntọn̄.\n",
+      "['Ġeya', 'Ġorá»į', ',', 'Ġnnenikana', 'Ġisi', 'Ġlek', 'Ġogwukaan', 'ÌĦ-', 'ene', 'Ġawaji', ',', 'Ġme', 'ÌĢ', 'Ġito', 'Ġito', 'Ġinyi', ',', 'Ġme', 'ÌĢ', 'Ġiriaak', 'Ġuriaak', ',', 'Ġme', 'ÌĢ', 'Ġibeek', 'Ġmbeek', ',', 'Ġme', 'ÌĢ', 'Ġijin', 'Ġotu', ',', 'Ġme', 'ÌĢ', 'Ġitap', 'Ġofá»įnti', 'Ġufieejit', ',', 'Ġme', 'ÌĢ', 'Ġifuun', 'ÌĦ', 'Ġlek', 'Ġme', 'Ġntá»įn', 'ÌĦ.']\n",
+      "bọn ebirieen̄ kè kora ìre asiri mè elikana mè abiasafu. ebibi ere ebi otoko kè kora me ototun̄ ukan̄ me ototun̄ ukan̄.\n",
+      "['Ġbá»įn', 'Ġebirieen', 'ÌĦ', 'Ġke', 'ÌĢ', 'Ġkora', 'Ġi', 'ÌĢ', 're', 'Ġasiri', 'Ġme', 'ÌĢ', 'Ġelikana', 'Ġme', 'ÌĢ', 'Ġabiasafu', '.', 'Ġebibi', 'Ġere', 'Ġebi', 'Ġotoko', 'Ġke', 'ÌĢ', 'Ġkora', 'Ġme', 'Ġototun', 'ÌĦ', 'Ġukan', 'ÌĦ', 'Ġme', 'Ġototun', 'ÌĦ', 'Ġukan', 'ÌĦ.']\n",
+      "enyi mêchieen̄ ita me etete ebi ofifi ido. ijọn̄ ebi ochicha kinyi môrie enyi.\n",
+      "['Ġenyi', 'Ġme', 'ÌĤ', 'chieen', 'ÌĦ', 'Ġita', 'Ġme', 'Ġetete', 'Ġebi', 'Ġofifi', 'Ġido', '.', 'Ġijá»įn', 'ÌĦ', 'Ġebi', 'Ġochicha', 'Ġkinyi', 'Ġmo', 'ÌĤ', 'rie', 'Ġenyi', '.']\n",
+      "ogwu ònyanyan̄a eji, mè igwen eji ibe eji eneluk ugwem òkup me mbuban. igwen yi awaji ogwenbe eji, ìkare mije inu geege eji erọbe. ire, awaji ìgwen eji mije nkeek eyi îkaan̄be me lek kiji, melek atata nnwọn kan̄ eyi înyibe eji inan̄a me lek kè jisọs karais, sabum enirom linyọn̄.\n",
+      "['Ġogwu', 'Ġo', 'ÌĢ', 'nyanyan', 'ÌĦ', 'a', 'Ġeji', ',', 'Ġme', 'ÌĢ', 'Ġigwen', 'Ġeji', 'Ġibe', 'Ġeji', 'Ġeneluk', 'Ġugwem', 'Ġo', 'ÌĢ', 'kup', 'Ġme', 'Ġmbuban', '.', 'Ġigwen', 'Ġyi', 'Ġawaji', 'Ġogwenbe', 'Ġeji', ',', 'Ġi', 'ÌĢ', 'kare', 'Ġmije', 'Ġinu', 'Ġgeege', 'Ġeji', 'Ġerá»įbe', '.', 'Ġire', ',', 'Ġawaji', 'Ġi', 'ÌĢ', 'gwen', 'Ġeji', 'Ġmije', 'Ġnkeek', 'Ġeyi', 'Ġi', 'ÌĤ', 'kaan', 'ÌĦ', 'be', 'Ġme', 'Ġlek', 'Ġkiji', ',', 'Ġmelek', 'Ġatata', 'Ġnnwá»įn', 'Ġkan', 'ÌĦ', 'Ġeyi', 'Ġi', 'ÌĤ', 'nyibe', 'Ġeji', 'Ġinan', 'ÌĦ', 'a', 'Ġme', 'Ġlek', 'Ġke', 'ÌĢ', 'Ġjisá»įs', 'Ġkarais', ',', 'Ġsabum', 'Ġenirom', 'Ġlinyá»įn', 'ÌĦ.']\n",
+      "ebi filisia erieen̄ akọn̄ me inyọn̄ orioon̄ ge, ebi ijeren ererieen̄ akọn̄ eyi kiban̄ me inyọn̄ ofifi orioon̄ òkibene isi ikpọ eyi ebi filisia ekupbe me inyọn̄. sà iteke ijọn̄ onikup me etete kiban̄.\n",
+      "['Ġebi', 'Ġfilisia', 'Ġerieen', 'ÌĦ', 'Ġaká»įn', 'ÌĦ', 'Ġme', 'Ġinyá»įn', 'ÌĦ', 'Ġorioon', 'ÌĦ', 'Ġge', ',', 'Ġebi', 'Ġijeren', 'Ġererieen', 'ÌĦ', 'Ġaká»įn', 'ÌĦ', 'Ġeyi', 'Ġkiban', 'ÌĦ', 'Ġme', 'Ġinyá»įn', 'ÌĦ', 'Ġofifi', 'Ġorioon', 'ÌĦ', 'Ġo', 'ÌĢ', 'kibene', 'Ġisi', 'Ġikpá»į', 'Ġeyi', 'Ġebi', 'Ġfilisia', 'Ġekupbe', 'Ġme', 'Ġinyá»įn', 'ÌĦ.', 'Ġsa', 'ÌĢ', 'Ġiteke', 'Ġijá»įn', 'ÌĦ', 'Ġonikup', 'Ġme', 'Ġetete', 'Ġkiban', 'ÌĦ.']\n"
      ]
     }
    ],
@@ -321,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,20 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15852\n",
-      "28190\n"
+      "18649\n",
+      "28148\n"
      ]
     }
    ],
    "source": [
-    "print(tokenizer.get_vocab_size())\n",
+    "print(eng_tokenizer.get_vocab_size())\n",
     "unique_words_verse = [set(verse.split()) for verse in english_data]\n",
     "unique_words = set()\n",
     "for s in unique_words_verse:\n",
@@ -385,6 +313,90 @@
     "for idx, enc in enumerate(encoded_inputs):\n",
     "    print(english_data[idx])\n",
     "    print(enc.tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10000\n",
+      "20000\n",
+      "Custom tokenizer vocab size on train data: 6859\n"
+     ]
+    }
+   ],
+   "source": [
+    "from custom_tokenizers.tokenizerv1 import parse_sentence\n",
+    "tokens = set()\n",
+    "for idx, s in enumerate(train['Obolo']):\n",
+    "    if idx % 10000 == 0:\n",
+    "        print(idx)\n",
+    "    tokens.update(set(parse_sentence(s)))\n",
+    "print('Custom tokenizer vocab size on train data:', len(tokens))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['mônikpọ', 'baraken', 'môkilibi', 'nikanọ', 'ǹnenkwala', 'ri', 'magidala', 'mumumuk', 'pirisila', 'mêkiyiyeek']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(tokens)[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mè initumu inyi samien ibe, “kpọ, mgbọ keyi owu ora ikan. nsabọn ebirieen̄ kwun̄ si kpekup kubọk owu okupbe. eya orọ, to ubọọn̄ nyi eji, ogwu òbokikpulu eji, mè ikisibi oyerebet inyi eji kubọk îkupbe me otutuuk ofifi ido geelek.”\n",
+      "['mè', 'i', 'ni', 'tumu', 'i', 'nyi', 'samien', 'i', 'be', ',', '“', 'kpọ', ',', 'm', 'gbọ', 'keyi', 'o', 'wu', 'o', 'ra', 'i', 'kan', '.', 'nsabọn', 'ebirieen̄', 'kwun̄', 'si', 'kpe', 'kup', 'kubọk', 'o', 'wu', 'o', 'kup', 'be', '.', 'e', 'ya', 'o', 'rọ', ',', 'to', 'ubọọn̄', 'n', 'yi', 'e', 'ji', ',', 'o', 'gwu', 'o', '̀', 'bo', 'ki', 'kpulu', 'e', 'ji', ',', 'mè', 'i', 'ki', 'sibi', 'o', 'yerebet', 'i', 'nyi', 'e', 'ji', 'kubọk', 'i', '̂', 'kup', 'be', 'me', 'o', 'REDUP', 'tuuk', 'o', 'REDUP', 'fi', 'i', 'do', 'geelek', '.', '”']\n",
+      "mèinitumuinyisamienibe,“kpọ,mgbọkeyiowuoraikan.nsabọnebirieen̄kwun̄sikpekupkubọkowuokupbe.eyaorọ,toubọọn̄nyieji,ogwuòbokikpulueji,mèikisibioyerebetinyiejikubọkîkupbemeotutuukofifiidogeelek.”\n",
+      "mèinitumuinyisamienibe,“kpọ,mgbọkeyiowuoraikan.nsabọnebirieen̄kwun̄sikpekupkubọkowuokupbe.eyaorọ,toubọọn̄nyieji,ogwuòbokikpulueji,mèikisibioyerebetinyiejikubọkîkupbemeoREDUPtuukoREDUPfiidogeelek.”\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent = test['Obolo'][10]\n",
+    "print(sent)\n",
+    "print(parse_sentence(sent))\n",
+    "print(sent.replace(' ', ''))\n",
+    "print(''.join(parse_sentence(sent)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27987 3110 31097\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(train['Obolo']), len(test['Obolo']), len(train['Obolo'])+len(test['Obolo']))"
    ]
   },
   {
@@ -518,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
