--- a/transformer-nmt/transformer_nmt.ipynb
+++ b/transformer-nmt/transformer_nmt.ipynb
@@ -12,7 +12,7 @@
     "from datasets import load_dataset\n",
     "from evaluate import load, combine\n",
     "from tqdm import tqdm\n",
-    "\n",
+    "    \n",
     "from transformer import *\n",
     "from dataset import *\n",
     "\n",
@@ -27,6 +27,20 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de429262ab1a4818b37c2ca027a0a99d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -38,11 +52,11 @@
    ],
    "source": [
     "# get data \n",
-    "train = load_dataset('csv', data_files='../data/train.csv')['train']\n",
-    "test = load_dataset('csv', data_files='../data/test.csv')['train']\n",
+    "train = load_dataset('csv', data_files='../data/train_old.csv')['train']\n",
+    "test = load_dataset('csv', data_files='../data/test_old.csv')['train']\n",
     "val = test[:200] # random choice for val loss\n",
     "\n",
-    "obolo_tokenizer = PreTrainedTokenizerFast(tokenizer_file='../tokenizers/obolo-bpe-tokenizer.json', padding='left')\n",
+    "obolo_tokenizer = PreTrainedTokenizerFast(tokenizer_file='../custom_tokenizers/obolo-bpe-tokenizer-old.json', padding='left')\n",
     "english_tokenizer = AutoTokenizer.from_pretrained('gpt2', padding='left')\n",
     "\n",
     "print(obolo_tokenizer.vocab_size)\n",
@@ -59,7 +73,7 @@
     "vocab_transform[TGT_LANGUAGE] = english_tokenizer.vocab\n",
     "# for ln in [SRC_LANGUAGE, TGT_LANGUAGE]:\n",
     "#   vocab_transform[ln].set_default_index(UNK_IDX)\n",
-    "init_text_transform(token_transform, vocab_transform)\n",
+    "init_text_transform(token_transform)\n",
     "\n",
     "# now this BPE tokenizer is also equipped with a decoder, so we should be able to do Obolo -> English and English -> Obolo"
    ]
@@ -533,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +573,7 @@
     "        ys = torch.cat([ys,\n",
     "                        torch.ones(1, 1).type_as(src.data).fill_(next_word)], dim=0)\n",
     "        # save vram\n",
-    "        del tgt_mask\n",
+    "        del tgt_mask \n",
     "        torch.cuda.empty_cache()\n",
     "        if next_word == EOS_IDX:\n",
     "            break\n",
@@ -656,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -722,6 +736,73 @@
    "source": [
     "scores = metrics.compute(predictions=preds, references=refs)\n",
     "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sample sentence translation\n",
+    "import torch\n",
+    "from datasets import load_dataset\n",
+    "m = torch.load('transformer_obolo_to_english_bpe.pt').to('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hear ye now what the lord saith; arise, contend thou before the mountains, and let the hills hear thy voice.\n",
+      "hearken ye unto the lord, saith the lord; hear ye from the mountain, and hear your words, which hear your words which hear your words.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test['English'][100])\n",
+    "print(translate(m, test['Obolo'][100]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "and the king said unto zerah, what [is] thy father? and he said unto him, behold, i [am] this day: for this day is come to jerusalem, because he hath sent me to day, and said, this is come unto me, and i will give him to my father.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"ogwu ubọọn̄ oneniyaka ido siba ibe, “sà gwun̄ nte uwu kwun̄ ìkup me owa?” siba ofọfọọk ibe ke ọmọ òwa me jeruselem okupbe, mije, ìkikeek ibe, usini mgbọ, cherekeyi, ke ebi uwu kè ijeren mêniyaka irek mkpulu nte nte kan̄ inyi ọmọ.\"\n",
+    "print(translate(m, sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preds = []\n",
+    "# refs = []\n",
+    "# for idx in tqdm(range(300)):\n",
+    "#     ob, en = test['Obolo'][idx], test['English'][idx]\n",
+    "#     refs.append(en)\n",
+    "#     pred = translate(m, ob)\n",
+    "#     preds.append(pred)\n",
+    "    \n",
+    "# scores = metrics.compute(predictions=preds, references=refs)\n",
+    "# scores"
    ]
   }
  ],
