--- a/transformer-nmt/transformer_nmt custom_tokenizer.ipynb
+++ b/transformer-nmt/transformer_nmt custom_tokenizer.ipynb
@@ -89,12 +89,9 @@
     "\n",
     "# change this due to custom tokenizer\n",
     "# init_text_transform(token_transform)\n",
-    "# text_transform[SRC_LANGUAGE] = sequential_transforms((lambda text: [obolo_vocab[token] if token in obolo_vocab else UNK_IDX for token in token_transform[SRC_LANGUAGE](text)]), # input to tokens to ids\n",
-    "                                                    #  tensor_transform)                                                                                                          # add BOS/EOS and create tensor\n",
+    "text_transform[SRC_LANGUAGE] = sequential_transforms((lambda text: [obolo_vocab[token] if token in obolo_vocab else UNK_IDX for token in token_transform[SRC_LANGUAGE](text)]), # input to tokens to ids\n",
+    "                                                     tensor_transform)                                                                                                          # add BOS/EOS and create tensor\n",
     "\n",
-    "text_transform[SRC_LANGUAGE] = sequential_transforms((lambda text: [obolo_vocab[token] for token in token_transform[SRC_LANGUAGE](text)]), # input to tokens to ids\n",
-    "                                                     tensor_transform)                                                                     # add BOS/EOS and create tensor\n",
-    "                                                                   \n",
     "text_transform[TGT_LANGUAGE] = sequential_transforms((lambda text: token_transform[TGT_LANGUAGE](text).get('input_ids')),\n",
     "                                                     tensor_transform)    \n"
    ]
