--- a/pretrained/t5.ipynb
+++ b/pretrained/t5.ipynb
@@ -124,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "677c4c1925f84f7d9af1727fc0361883",
+       "model_id": "f162400743c8430abc80af71e92632ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "febdfcbeab124af39d8ea00ade86cb69",
+       "model_id": "81a69758c09343df8b8b7da1f03e518d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,24 +194,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 2\n",
+    "batch_size = 16\n",
     "model_name = model_checkpoint.split(\"/\")[-1]\n",
     "args = Seq2SeqTrainingArguments(\n",
     "    f\"{model_name}-finetuned-{source_lang}-to-{target_lang}\",\n",
     "    eval_strategy = \"epoch\",\n",
-    "    learning_rate=2e-5,\n",
+    "    eval_steps = 100,\n",
+    "    save_strategy = 'steps',\n",
+    "    save_steps = 500,\n",
+    "    logging_dir='./logs', \n",
+    "    logging_steps=50, \n",
+    "    \n",
+    "    learning_rate=1e-4,\n",
     "    per_device_train_batch_size=batch_size,\n",
     "    per_device_eval_batch_size=batch_size,\n",
     "    weight_decay=0.01,\n",
-    "    save_total_limit=3,\n",
-    "    num_train_epochs=1,\n",
+    "    num_train_epochs=10,\n",
     "    predict_with_generate=True,\n",
-    "    fp16=True,\n",
-    "    push_to_hub=False,\n",
+    "    fp16=False\n",
     ")"
    ]
   },
@@ -219,23 +223,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/user/22494/ipykernel_865504/107648680.py:10: FutureWarning: load_metric is deprecated and will be removed in the next major version of datasets. Use 'evaluate.load' instead, from the new library 🤗 Evaluate: https://huggingface.co/docs/evaluate\n",
-      "  metric = load_metric(\"sacrebleu\")\n",
-      "/move/u/willsh/miniconda3/envs/224W/lib/python3.11/site-packages/datasets/load.py:759: FutureWarning: The repository for sacrebleu contains custom code which must be executed to correctly load the metric. You can inspect the repository content at https://raw.githubusercontent.com/huggingface/datasets/2.19.1/metrics/sacrebleu/sacrebleu.py\n",
-      "You can avoid this message in future by passing the argument `trust_remote_code=True`.\n",
-      "Passing `trust_remote_code=True` will be mandatory to load this metric from the next major release of `datasets`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from datasets import load_metric\n",
+    "from evaluate import load, combine\n",
     "\n",
     "def postprocess_text(preds, labels):\n",
     "    preds = [pred.strip() for pred in preds]\n",
@@ -243,7 +234,12 @@
     "\n",
     "    return preds, labels\n",
     "\n",
-    "metric = load_metric(\"sacrebleu\")\n",
+    "chrf = load('chrf')\n",
+    "gleu = load('google_bleu')\n",
+    "rouge = load('rouge') \n",
+    "bleu = load('bleu')\n",
+    "# meteor = load('meteor')\n",
+    "metrics = combine([chrf, bleu, rouge, gleu])\n",
     "\n",
     "def compute_metrics(eval_preds):\n",
     "    preds, labels = eval_preds\n",
@@ -258,8 +254,7 @@
     "    # Some simple post-processing\n",
     "    decoded_preds, decoded_labels = postprocess_text(decoded_preds, decoded_labels)\n",
     "\n",
-    "    result = metric.compute(predictions=decoded_preds, references=decoded_labels)\n",
-    "    result = {\"bleu\": result[\"score\"]}\n",
+    "    result = metrics.compute(predictions=decoded_preds, references=decoded_labels)\n",
     "\n",
     "    prediction_lens = [np.count_nonzero(pred != tokenizer.pad_token_id) for pred in preds]\n",
     "    result[\"gen_len\"] = np.mean(prediction_lens)\n",
@@ -303,8 +298,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='1501' max='13994' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 1501/13994 01:40 < 13:58, 14.89 it/s, Epoch 0.11/1]\n",
+       "      <progress value='848' max='17500' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  848/17500 02:20 < 46:04, 6.02 it/s, Epoch 0.48/10]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -324,6 +319,19 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/move/u/willsh/miniconda3/envs/224W/lib/python3.11/site-packages/transformers/trainer.py:1885\u001b[0m, in \u001b[0;36mTrainer.train\u001b[0;34m(self, resume_from_checkpoint, trial, ignore_keys_for_eval, **kwargs)\u001b[0m\n\u001b[1;32m   1883\u001b[0m         hf_hub_utils\u001b[38;5;241m.\u001b[39menable_progress_bars()\n\u001b[1;32m   1884\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1885\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43minner_training_loop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1886\u001b[0m \u001b[43m        \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1887\u001b[0m \u001b[43m        \u001b[49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1888\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtrial\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrial\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1889\u001b[0m \u001b[43m        \u001b[49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1890\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/move/u/willsh/miniconda3/envs/224W/lib/python3.11/site-packages/transformers/trainer.py:2221\u001b[0m, in \u001b[0;36mTrainer._inner_training_loop\u001b[0;34m(self, batch_size, args, resume_from_checkpoint, trial, ignore_keys_for_eval)\u001b[0m\n\u001b[1;32m   2215\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maccelerator\u001b[38;5;241m.\u001b[39maccumulate(model):\n\u001b[1;32m   2216\u001b[0m     tr_loss_step \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtraining_step(model, inputs)\n\u001b[1;32m   2218\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   2219\u001b[0m     args\u001b[38;5;241m.\u001b[39mlogging_nan_inf_filter\n\u001b[1;32m   2220\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_torch_xla_available()\n\u001b[0;32m-> 2221\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m (torch\u001b[38;5;241m.\u001b[39misnan(tr_loss_step) \u001b[38;5;129;01mor\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misinf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtr_loss_step\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m   2222\u001b[0m ):\n\u001b[1;32m   2223\u001b[0m     \u001b[38;5;66;03m# if loss is nan or inf simply add the average of previous logged losses\u001b[39;00m\n\u001b[1;32m   2224\u001b[0m     tr_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m tr_loss \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39mglobal_step \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_globalstep_last_logged)\n\u001b[1;32m   2225\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
