lots of training and testing

--- a/tokenizer_testing.ipynb
+++ b/tokenizer_testing.ipynb
@@ -2,29 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\abhiv\\miniconda3\\envs\\mse244\\Lib\\site-packages\\huggingface_hub\\file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from transformers import AutoConfig, AutoModelForSeq2SeqLM, AutoTokenizer\n",
+    "from transformers import AutoConfig, AutoModelForSeq2SeqLM, AutoTokenizer, PreTrainedTokenizerFast\n",
+    "\n",
     "\n",
     "# Download configuration from huggingface.co and cache.\n",
     "# model_id = \"facebook/mbart-large-50-many-to-many-mmt\"\n",
-    "model_id = \"google-t5/t5-base\"\n",
+    "# model_id = \"google-t5/t5-base\"\n",
     "\n",
     "# does not download the pretrained weights, just affects configuration\n",
     "# use AutoModelForSeq2SeqLM.from_pretrained to also download the weights\n",
-    "config = AutoConfig.from_pretrained(model_id)\n",
-    "model = AutoModelForSeq2SeqLM.from_config(config)"
+    "# config = AutoConfig.from_pretrained(model_id)\n",
+    "# model = AutoModelForSeq2SeqLM.from_config(config)"
    ]
   },
   {
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,18 +90,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7150\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = Tokenizer(BPE(unk_token=\"[UNK]\"))\n",
     "trainer = BpeTrainer(special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"])\n",
+    "# try to restrict vocab size to be similar to our custom tokenizer vocab\n",
+    "CUSTOM_VOCAB_SIZE = 7150\n",
+    "trainer = BpeTrainer(vocab_size=CUSTOM_VOCAB_SIZE, special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"])\n",
+    "\n",
     "\n",
     "obolo_data = train['Obolo']\n",
     "\n",
     "tokenizer.pre_tokenizer = ByteLevel()\n",
     "tokenizer.decoder = decoders.ByteLevel()\n",
-    "tokenizer.train_from_iterator(obolo_data, trainer)"
+    "tokenizer.train_from_iterator(obolo_data, trainer)\n",
+    "print(tokenizer.get_vocab_size())\n",
+    "tokenizer.save('./custom_tokenizers/obolo-bpe-tokenizer-small.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7150\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tokenizers.models import WordPiece\n",
+    "from tokenizers.trainers import WordPieceTrainer\n",
+    "tokenizer = Tokenizer(WordPiece(unk_token=\"[UNK]\"))\n",
+    "# try to restrict vocab size to be similar to our custom tokenizer vocab\n",
+    "CUSTOM_VOCAB_SIZE = 7150\n",
+    "trainer = WordPieceTrainer(vocab_size=CUSTOM_VOCAB_SIZE, special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"])\n",
+    "\n",
+    "\n",
+    "obolo_data = train['Obolo']\n",
+    "\n",
+    "tokenizer.pre_tokenizer = Whitespace()\n",
+    "tokenizer.decoder = decoders.WordPiece()\n",
+    "tokenizer.train_from_iterator(obolo_data, trainer)\n",
+    "print(tokenizer.get_vocab_size())\n",
+    "tokenizer.save('./custom_tokenizers/obolo-wordpiece-tokenizer-small.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original BPE Tokenizer Length: 17596\n",
+      "{'input_ids': [5750, 610, 66, 2751, 35, 516, 178, 61, 233], 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0, 0], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1]}\n",
+      "7150\n",
+      "7302\n",
+      "{'input_ids': [6936, 513, 296, 225, 2363, 3933, 347, 358], 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1]}\n",
+      "{'input_ids': [89, 1087, 233, 42, 185, 66, 42, 18623, 42, 9386, 42, 1030], 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}\n",
+      "8343\n",
+      "8343\n",
+      "17596\n",
+      "18637\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json \n",
+    "\n",
+    "obolo_tokenizer = PreTrainedTokenizerFast(tokenizer_file='./custom_tokenizers/obolo-bpe-tokenizer.json', padding='left')\n",
+    "print(\"Original BPE Tokenizer Length:\", obolo_tokenizer.vocab_size)\n",
+    "test_sentence = \"jeremot liyi luku sene kot\"\n",
+    "print(obolo_tokenizer(test_sentence))\n",
+    "custom_token_set = dict(json.load( open( \"./custom_tokenizers/custom_obolo_tokenizer_vocab_2.json\" ) )).keys()\n",
+    "# Train a new tokenizer using the am_train and the old tokenizer object.\n",
+    "print(len(custom_token_set))\n",
+    "new_tokenizer = obolo_tokenizer.train_new_from_iterator(custom_token_set, vocab_size=100000)\n",
+    "print(len(set(new_tokenizer.vocab).intersection(set(obolo_tokenizer.vocab))))\n",
+    "obolo_tokenizer.add_tokens(list(new_tokenizer.vocab))\n",
+    "\n",
+    "print(new_tokenizer(test_sentence))\n",
+    "print(obolo_tokenizer(test_sentence))\n",
+    "\n",
+    "print(new_tokenizer.vocab_size)\n",
+    "print(len(new_tokenizer))\n",
+    "print(obolo_tokenizer.vocab_size)\n",
+    "print(len(obolo_tokenizer))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6864\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer_small = PreTrainedTokenizerFast(tokenizer_file='./custom_tokenizers/obolo-bpe-tokenizer-small.json', padding='left')\n",
+    "print(len(tokenizer_small))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18887\n"
+     ]
+    }
+   ],
+   "source": [
+    "# obolo_tokenizer.save_pretrained(save_directory='./custom_tokenizers/custom_plus_bpe_obolo_tokenizer')\n",
+    "obolo_tokenizer = PreTrainedTokenizerFast(tokenizer_file='./custom_tokenizers/custom_plus_bpe_obolo_tokenizer/tokenizer.json', padding='left')\n",
+    "print(len(obolo_tokenizer))"
    ]
   },
   {
