--- a/tokenizer_testing.ipynb
+++ b/tokenizer_testing.ipynb
@@ -132,21 +132,71 @@
     }
    ],
    "source": [
-    "from tokenizers.models import WordPiece\n",
-    "from tokenizers.trainers import WordPieceTrainer\n",
-    "tokenizer = Tokenizer(WordPiece(unk_token=\"[UNK]\"))\n",
-    "# try to restrict vocab size to be similar to our custom tokenizer vocab\n",
-    "CUSTOM_VOCAB_SIZE = 7150\n",
-    "trainer = WordPieceTrainer(vocab_size=CUSTOM_VOCAB_SIZE, special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"])\n",
+    "# from tokenizers.models import WordPiece\n",
+    "# from tokenizers.trainers import WordPieceTrainer\n",
+    "# tokenizer = Tokenizer(WordPiece(unk_token=\"[UNK]\"))\n",
+    "# # try to restrict vocab size to be similar to our custom tokenizer vocab\n",
+    "# CUSTOM_VOCAB_SIZE = 7150\n",
+    "# trainer = WordPieceTrainer(vocab_size=CUSTOM_VOCAB_SIZE, special_tokens=[\"[UNK]\", \"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\"])\n",
     "\n",
     "\n",
-    "obolo_data = train['Obolo']\n",
+    "# obolo_data = train['Obolo']\n",
     "\n",
-    "tokenizer.pre_tokenizer = Whitespace()\n",
-    "tokenizer.decoder = decoders.WordPiece()\n",
-    "tokenizer.train_from_iterator(obolo_data, trainer)\n",
-    "print(tokenizer.get_vocab_size())\n",
-    "tokenizer.save('./custom_tokenizers/obolo-wordpiece-tokenizer-small.json')"
+    "# tokenizer.pre_tokenizer = Whitespace()\n",
+    "# tokenizer.decoder = decoders.WordPiece()\n",
+    "# tokenizer.train_from_iterator(obolo_data, trainer)\n",
+    "# print(tokenizer.get_vocab_size())\n",
+    "# tokenizer.save('./custom_tokenizers/obolo-wordpiece-tokenizer-small.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5750, 610, 66, 2751, 35, 516, 178, 61, 233, 21, 21, 21, 21]\n",
+      " jeremot liyi luku sene kotffff\n",
+      "jeremot liyi luku sene kotffff\n",
+      "{'score': 100.0, 'char_order': 6, 'word_order': 0, 'beta': 2, 'bleu': 1.0, 'precisions': [1.0, 1.0, 1.0, 1.0], 'brevity_penalty': 1.0, 'length_ratio': 1.0, 'translation_length': 5, 'reference_length': 5, 'rouge1': 1.0, 'rouge2': 1.0, 'rougeL': 1.0, 'rougeLsum': 1.0, 'meteor': 0.996, 'google_bleu': 1.0}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\abhiv\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\abhiv\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     C:\\Users\\abhiv\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "small_bpe = PreTrainedTokenizerFast(tokenizer_file='./custom_tokenizers/obolo-bpe-tokenizer-small.json', padding='left')\n",
+    "test_sentence = \"jeremot liyi luku sene kotffff\"\n",
+    "token_ids = small_bpe.encode(test_sentence)\n",
+    "print(token_ids)\n",
+    "decoded_tokens = small_bpe.decode(token_ids)\n",
+    "print(decoded_tokens)\n",
+    "print(test_sentence)\n",
+    "from evaluate import load, combine\n",
+    "chrf = load('chrf')\n",
+    "gleu = load('google_bleu')\n",
+    "rouge = load('rouge') \n",
+    "bleu = load('bleu')\n",
+    "meteor = load('meteor')\n",
+    "metrics = combine([chrf, bleu, rouge, meteor, gleu])\n",
+    "preds = [decoded_tokens]\n",
+    "print(metrics.compute(predictions=[decoded_tokens], references=[test_sentence]))"
    ]
   },
   {
